--- a/encriptador.css
+++ b/encriptador.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aquamarine;
+    background-image: url(imagenes/fondo.jpg);
 }
 
 header{
@@ -10,37 +10,51 @@ header{
 main{
     justify-content: space-around;
     display: flex;
+    margin: 0 0 80px 0;
 
 }
 
 .ingresarTexto{
     width: 45%;
     display: block;
-    border: 1px solid black;
-
 }
 
 .ingresarTexto > textarea{
     resize: none;
-    
+    border: none;
     width: 98%;
-    height: 80%;
+    height: 70%;
     display: flex;
-    /*background-color: transparent;*/
+    margin: 0 0 10px 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20pt;
+    text-align: center;
+    text-decoration: wavy;
+    color: white;
+    background-color: transparent;
+    -webkit-text-stroke: 1px rgb(21, 255, 0);
 
+}
+.aviso{
+    color: gold;
+    text-align: center;
+    font-size: 10pt;
 }
 
 .ingresarTexto > div{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 10px 0;
+    box-sizing: border-box;
     height: 20%;
     width: 100%;
 
 }
 
 #encriptar{
-    background-color: rgb(127, 140, 255);
+    background-color:transparent;
+    color: white;
     height: 60px;
     width: 200px;
     border: 2px solid rgb(28, 4, 245);
@@ -51,13 +65,13 @@ main{
     background-color: transparent;
     height: 60px;
     width: 200px;
+    color: white;
     border: 2px solid rgba(12, 197, 12, 0.651);
     border-radius: 10px;
 }
 
 .cajaResultado{
     width: 45%;
-    border: 1px solid black;
     display: block;
 
 }
@@ -66,6 +80,51 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    color: white;
+    
+}
+
+#resultado{
+    resize: none;
+    border: none;
+    background-color: transparent;
+    width: 98%;
+    height: 70%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20pt;
+    text-align: center;
+    color: rgb(250, 2, 2);
+}
+#copiarTexto{
+    display: flex;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    box-sizing: border-box;
+    height: 60px;
+    width: 200px;
+    border: 2px solid rgb(255, 1, 1);
+    border-radius: 10px;
+    color: white;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
     align-items: flex-start;
     
+}
+footer a{
+    background-color: transparent;
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    text-decoration: none;
 }
